# ROBOTIS-OP2

./: README.md
op2_gui_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
op2_gui_demo/config/: gui_config.yaml  gui_motion.yaml
op2_gui_demo/launch/: op2_demo.launch
op2_kinematics_dynamics/: CHANGELOG.rst  CMakeLists.txt  package.xml
op2_kinematics_dynamics/include/op2_kinematics_dynamics/: op2_kinematics_dynamics.h  op2_kinematics_dynamics_define.h
op2_kinematics_dynamics/src/: link_data.cpp  op2_kinematics_dynamics.cpp
op2_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
op2_manager/config/: OP2.robot  dxl_init.yaml  ini_pose.yaml
op2_manager/launch/: op2_gazebo.launch  op2_manager.launch
op2_manager/src/: op2_manager.cpp
op2_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
op2_walking_module/config/: param.yaml
op2_walking_module/include/op2_walking_module/: op2_walking_module.h  op2_walking_parameter.h
op2_walking_module/src/: op2_walking_module.cpp
robotis_op2/: CHANGELOG.rst  CMakeLists.txt  package.xml
