<?xml version="1.0"?>
<package format="2">
  <name>robotis_op2</name>
  <version>0.1.0</version>
  <description>
    ROS packages for the robotis_op2 (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/robotis_op2</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op2/getting_started/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP2</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP2/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cm_740_module</exec_depend>
  <exec_depend>op2_gui_demo</exec_depend>
  <exec_depend>op2_kinematics_dynamics</exec_depend>
  <exec_depend>op2_manager</exec_depend>
  <exec_depend>op2_walking_module</exec_depend>
  <export><metapackage/></export>
</package>
